"""Test sensor."""

from gtfs_station_stop.vehicle import Vehicle

from collections.abc import Iterable
from dataclasses import dataclass
from datetime import datetime, timedelta
from typing import Any
from unittest.mock import AsyncMock, patch

from freezegun.api import FrozenDateTimeFactory
from gtfs_station_stop.arrival import Arrival
from gtfs_station_stop.route_info import RouteInfo, RouteType
from gtfs_station_stop.trip_info import TripInfo
from gtfs_station_stop.schedule import GtfsSchedule
from homeassistant.components.sensor import DOMAIN as SENSOR_DOMAIN
from homeassistant.const import STATE_UNKNOWN
from homeassistant.core import HomeAssistant
from homeassistant.helpers import entity_registry as er
from pytest_homeassistant_custom_component.common import (
    MockConfigEntry,
    async_fire_time_changed,
)
from syrupy.assertion import SnapshotAssertion

from custom_components.gtfs_realtime.const import ROUTE_ID
from custom_components.gtfs_realtime.coordinator import (
    GtfsRealtimeCoordinator,
)

from custom_components.gtfs_realtime.sensor import ArrivalSensor


def assert_all_equal(collection: Iterable[Any]) -> None:
    assert len(set(collection)) <= 1


async def test_setup_sensors(hass: HomeAssistant, entry_v2_nodialout: MockConfigEntry):
    """Test setting ups sensors in integration."""
    with (
        patch(
            "custom_components.gtfs_realtime.coordinator.GtfsRealtimeCoordinator._async_update_data",  # noqa E501
            new_callable=AsyncMock,
        ),
        patch(
            "custom_components.gtfs_realtime.coordinator.GtfsRealtimeCoordinator.async_update_static_data",  # noqa E501
            new_callable=AsyncMock,
        ),
    ):
        entry_v2_nodialout.add_to_hass(hass)
        assert await hass.config_entries.async_setup(entry_v2_nodialout.entry_id)
        await hass.async_block_till_done()
        assert hass.states.get("sensor.101n_101n_arrival_4").state == STATE_UNKNOWN  # ty:ignore[unresolved-attribute]
        # All Sensors of a station have the same device id
        ent_reg = er.async_get(hass)
        assert_all_equal(
            ent_reg.async_get(f"sensor.{s}").device_id  # ty:ignore[unresolved-attribute]
            for s in [f"101n_101n_arrival_{i}" for i in range(1, 5)]
        )
        assert_all_equal(
            ent_reg.async_get(f"sensor.{s}").device_id  # ty:ignore[unresolved-attribute]
            for s in [f"102s_102s_arrival_{i}" for i in range(1, 5)]
        )
        assert ent_reg.async_get(
            "sensor.101n_101n_arrival_1"
        ).device_id != ent_reg.async_get(  # ty:ignore[unresolved-attribute]
            "sensor.102s_102s_arrival_1"
        )


async def async_setup_coordinator(
    hass: HomeAssistant, entry_v2_nodialout: MockConfigEntry
) -> GtfsRealtimeCoordinator:
    """Setup the Coordinator."""
    static_update_data = GtfsSchedule()
    static_update_data.route_info_ds.route_infos["123"] = RouteInfo(
        {
            "route_id": "123",
            "route_short_name": "123",
            "route_type": RouteType.SUBWAY.value,
            "route_color": "FFFFFF",
            "route_text_color": "888888",
        }
    )
    static_update_data.trip_info_ds.trip_infos["123-test"] = TripInfo(
        {
            "route_id": "123",
            "trip_id": "123-test",
            "service_id": "SVC",
            "trip_headsign": "Downtown",
            "trip_short_name": "123-test",
            "direction_id": "Northbound",
        }
    )

    with (
        patch(
            "custom_components.gtfs_realtime.coordinator.FeedSubject.async_update",  # noqa E501
            new_callable=AsyncMock,
            return_value=None,
        ),
        patch(
            "custom_components.gtfs_realtime.coordinator.GtfsRealtimeCoordinator.async_update_static_data",  # noqa E501
            new_callable=AsyncMock,
            return_value=static_update_data,
        ),
    ):
        entry_v2_nodialout.add_to_hass(hass)
        assert await hass.config_entries.async_setup(entry_v2_nodialout.entry_id)
        await hass.async_block_till_done()

    return entry_v2_nodialout.runtime_data


async def test_update(
    hass: HomeAssistant,
    freezer: FrozenDateTimeFactory,
    entry_v2_nodialout: MockConfigEntry,
    snapshot: SnapshotAssertion,
):
    """Smoke test the sensor platform."""
    start_time = datetime.now()
    coordinator: GtfsRealtimeCoordinator = await async_setup_coordinator(
        hass, entry_v2_nodialout
    )
    coordinator.route_icons = None
    coordinator.hub.realtime_feed_uris = []

    @dataclass
    class UpdateCounter:
        """Class to count updates."""

        update_count: int = 0

    update_counter = UpdateCounter(update_count=0)

    def make_ts(minutes) -> float:
        return (
            start_time + timedelta(minutes=minutes - update_counter.update_count)
        ).timestamp()

    def coordinator_update_side_effects(_):
        arrivals = {
            "101N": [
                Arrival(route="AX", trip="AX1", time=make_ts(-10)),  # test old arrival
                Arrival(
                    route="A",
                    trip="A1",
                    time=make_ts(4),
                    vehicle=Vehicle(
                        trip_id="A1", latitude=45.0, longitude=-75.0, bearing=0.0
                    ),
                ),
                Arrival(route="B", trip="B1", time=make_ts(6)),
                Arrival(route="123-route", trip="123-test", time=make_ts(8)),
            ],
            "102S": [
                Arrival(route="X", trip="X1", time=make_ts(9)),
                Arrival(route="Y", trip="Y1", time=make_ts(13)),
                Arrival(route="Z", trip="Z1", time=make_ts(17)),
            ],
        }
        for stop_id, stop in coordinator.gtfs_update_data.station_stops.items():
            stop.arrivals = arrivals[stop_id]
        update_counter.update_count += 1
        return

    coordinator.hub.async_update = AsyncMock()  # ty:ignore[invalid-assignment]
    coordinator.hub.async_update.side_effect = coordinator_update_side_effects  # ty:ignore[unresolved-attribute]
    freezer.tick(timedelta(minutes=1))
    async_fire_time_changed(hass)
    await hass.async_block_till_done()
    assert coordinator.hub.async_update.call_count == 1  # ty:ignore[unresolved-attribute]

    for sensor in [f"101n_101n_arrival_{i}" for i in range(1, 5)] + [
        f"102s_102s_arrival_{i}" for i in range(1, 5)
    ]:
        sensor_data = hass.states.get(f"{SENSOR_DOMAIN}.{sensor}")
        assert sensor_data is not None
        assert snapshot(name=f"{sensor}-after-1-minute") == sensor_data.state, (
            f"failed assertion for sensor {sensor}"
        )
        assert snapshot(name=f"{sensor}-attributes-after-1-minute") == dict(
            sensor_data.attributes
        ), f"failed assertion for sensor {sensor}"


async def test_route_icon_missing_route_id(
    hass: HomeAssistant, entry_v2_nodialout: MockConfigEntry
):
    """Test that missing route ID does not break the sensor."""
    coordinator: GtfsRealtimeCoordinator = await async_setup_coordinator(
        hass, entry_v2_nodialout
    )
    coordinator.route_icons = "http://example.com/{}.png"
    sensor = ArrivalSensor(coordinator, "1", 0)
    sensor._arrival_detail[ROUTE_ID] = ""
    assert sensor.entity_picture is not None
    sensor._arrival_detail[ROUTE_ID] = None
    assert sensor.entity_picture is None
